# Programming_course_1

Lab_11/: task1.c  task2.c  task3.c  task4.c  task5.c  task_star.c
Lab_12/dinamic_lib/: task.c
Lab_12/static_lib/: main.c  task.h
Lab_13/myprogram/: CMakeLists.txt
Lab_13/myprogram/app/: main.c
Lab_15/: file.csv  main.c
Lab_16/: 1.c  2.c  3.c  4.c  5.c  6(sleepsort).c  7.c  8(matrix).c  9(matrix_time).c  data.txt  m.html  plot.gp  threads.md
Lab_17/: sj.h  test.c
Lab_18/src/: main.cpp  paint_core.cpp  paint_core.hpp
RGZ/: bounce.bf  loop_test.bf  main.c
